--- a/index.html
+++ b/index.html
@@ -2,15 +2,29 @@
 <html>
 <head>
 	<title>My_Name Homepage</title>
-	<link rel="stylesheet" type="text/css" href="css/site.css">
+	<link rel="stylesheet" type="text/css" href="css/site.css"> <img src="img/self
+	ie.jpg">
 </head>
 <body>
 	<main>
-		<p>This page was generated from Wes' File Structure Template Repo.</p>
+		<p> Hello, my name is Olivia and some of my passions are fruit, cooking, and
+			 travel. One of my favorite places that I've traveled is Tuscany. I have a
+			 white french bulldog named Buttermilk that I adore. In my free
+			 time I enjoy going on walks and taking photos. I aspire to work in some
+			 sort of creative directing position some day.
+			   </p>
 
-		<p>Purple grapes.</p>
 	</main>
+	<li><a href="lab1/index.html">Lab 1</a></li>
+				<li><a href="lab2/index.html">Lab 2</a></li>
+				<li><a href="lab3/index.html">Lab 3</a></li>
+				<li><a href="lab4/index.html">Lab 4</a></li>
+				<li><a href="lab5/index.html">Lab 5</a></li>
+				<li><a href="lab6/index.html">Lab 6</a></li>
 
+<img src="img/sanfranolivia.jpg" style="width:400px;height:500px;">
 
 </body>
+</body>
+
 </html>
