--- a/lab3/index.html
+++ b/lab3/index.html
@@ -3,9 +3,23 @@
 <head>
 	<title>Lab X - Subject/Topic</title>
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
-	<link rel="stylesheet" type="text/css" href="css/lab.css">
+	<link rel="stylesheet" type="text/css" href="css/lab.css"> 
 </head>
+<h1> Lab 3 File Structures </h1>
+
 <body>
+	<h1> Subject: </h1>
+ <p> This lab is comprised of file structures and linking those files on to
+	 a webpage. <p>
+
+<h1> Challenges: </h1>
+<p> My greatest challenge for this lab is completing it in time. <p>
+
+	<h1> Results: </h1>
+	<p> Here are photos of my file structure and html for my homepage. <p>
+
+<img src="homepagehtml.jpg" style="width:600px;height:400px;">
+<img src="filestructure.jpg" style="width:600px;height:400px;">
 
 </body>
 </html>
