--- a/index.html
+++ b/index.html
@@ -1,28 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My_Name Homepage</title>
-	<link rel="stylesheet" type="text/css" href="css/site.css"> <img src="img/self
-	ie.jpg">
+	<title>Olivia's Homepage</title>
+	<link rel="stylesheet" type="text/css" href="css/mainsite.css">
+	<link rel="icon" type="img/png" href=img/my_photo.jpg>
+	<link rel="stylesheet" href="site.css">
 </head>
 <body>
 	<main>
-		<p> Hello, my name is Olivia and some of my passions are fruit, cooking, and
-			 travel. One of my favorite places that I've traveled is Tuscany. I have a
-			 white french bulldog named Buttermilk that I adore. In my free
-			 time I enjoy going on walks and taking photos. I aspire to work in some
-			 sort of creative directing position some day.
+		<p> Hello, my name is Olivia and some of my passions are history,
+			 cooking, and music. I currently live in Santa Cruz and major in Film
+			 and Digital Media at UCSC. Someday, I'd like to work as a director.
 			   </p>
 
 	</main>
-	<li><a href="lab1/index.html">Lab 1</a></li>
-				<li><a href="lab2/index.html">Lab 2</a></li>
-				<li><a href="lab3/index.html">Lab 3</a></li>
-				<li><a href="lab4/index.html">Lab 4</a></li>
-				<li><a href="lab5/index.html">Lab 5</a></li>
-				<li><a href="lab6/index.html">Lab 6</a></li>
+	<div id="content1">
+	<li><a href="lab1/index.html">Lab 1</a></li> <div>
+	<div id="content2">
+				<li><a href="lab2/index.html">Lab 2</a></li> <div>
+				<div id="content3">
+				<li><a href="lab3/index.html">Lab 3</a></li> <div>
+				<div id="content4">
+				<li><a href="lab4/index.html">Lab 4</a></li> <div>
+				<div id="content5">
+				<li><a href="lab5/index.html">Lab 5</a></li> <div>
+				<div id="content6">
+				<li><a href="lab6/index.html">Lab 6</a></li> <div>
 
-<img src="img/sanfranolivia.jpg" style="width:400px;height:500px;">
+<img src="img/sanfranolivia.jpg" style="width:400px;height:450px;">
 
 </body>
 </body>
