--- a/lab3/index.html
+++ b/lab3/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Lab X - Subject/Topic</title>
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
-	<link rel="stylesheet" type="text/css" href="css/lab.css"> 
+	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <h1> Lab 3 File Structures </h1>
 
@@ -13,13 +13,14 @@
 	 a webpage. <p>
 
 <h1> Challenges: </h1>
-<p> My greatest challenge for this lab is completing it in time. <p>
+<p> My greatest challenge during this lab has been publishing my website via
+	Github. <p>
 
 	<h1> Results: </h1>
 	<p> Here are photos of my file structure and html for my homepage. <p>
 
-<img src="homepagehtml.jpg" style="width:600px;height:400px;">
-<img src="filestructure.jpg" style="width:600px;height:400px;">
+<img src="blankfornow" style="width:600px;height:400px;">
+<img src="blank" style="width:600px;height:400px;">
 
 </body>
 </html>
