--- a/lab4/index.html
+++ b/lab4/index.html
@@ -6,6 +6,48 @@
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
+	<h2>Challege:</h2>
+		<p>The purpose of Lab 4 is to introduce us to how to plan and think about
+		implementing a program step by step via the usage of high-level tasks.</p>
+	<h2>Problems:</h2>
+		<p>It was challenging to start each step of the program with a clear
+		and concise action that could describe exactly what we wanted to accomplish.
+		It was also difficult to stay consistent to a certain level of abstraction
+		when describing the task.</p>
+ 	<h2>Results:</h2>
+	  <img src="img/foccacia.jpg" style="width:270px;height:320px;float:right;">
+		<pre>How to make focaccia bread:
+		 1. Mix flour, salt, yeast
+		 a) 4 cups flour, 2 tsp yeast
+		 2. Mix dry ingredients with 2 cups of lukewarm water
+		 3. Drizzle generous amount of olive oil over mixed dough
+		 4. Cover bowl with towel and place in fridge for 12-18 hrs
+		 5. Place dough in baking dish, cover with generous amount of olive oil, let
+		 sit for 2-4 hrs
+		 6. Press fingers into dough till fingerprints cover entire area of dough
+		 7. Sprinkle loads of salt on top of dough
+		 8. Bake at 425 degrees for 25 minutes
 
+		 1. Hide cursor when cursor enters webpage bounds.
+		 2. Move diamond shape with cursor location.
+		 3. Align diamond shape to page number box when cursor nears border of the box.
+		         Move diamond shape to page number box.
+		         Rotate diamond 45 degrees.
+		         Dilate diamond to size of page number box.
+		 4. Reverse the previous process when the cursor leaves bounds of the numbered box.
+
+		 Pseudocode:
+		 // Repeat while cursor is in webpage
+		 //     Hide cursor
+		 //     Display diamond on cursor location
+
+		 // If cursor location is on page number box
+		 //     Slide diamond location to page number box center
+		 //     Rotate diamond 45 degrees
+		 //     Dilate diamond to size of page number box
+		 // Else
+		 //     Slide diamond location to cursor
+		 //     Rotate diamond -45 degrees
+		 //     Shrink diamond to original size</pre>
 </body>
 </html>
