--- a/index.html
+++ b/index.html
@@ -14,18 +14,13 @@
 			   </p>
 
 	</main>
-	<div id="content1">
-	<li><a href="lab1/index.html">Lab 1</a></li> <div>
-	<div id="content2">
-				<li><a href="lab2/index.html">Lab 2</a></li> <div>
-				<div id="content3">
-				<li><a href="lab3/index.html">Lab 3</a></li> <div>
-				<div id="content4">
-				<li><a href="lab4/index.html">Lab 4</a></li> <div>
-				<div id="content5">
-				<li><a href="lab5/index.html">Lab 5</a></li> <div>
-				<div id="content6">
-				<li><a href="lab6/index.html">Lab 6</a></li> <div>
+
+	<li><a href="lab1/index.html">Lab 1</a></li>
+				<li><a href="lab2/index.html">Lab 2</a></li>
+		<li><a href="lab3/index.html">Lab 3</a></li>
+			<li><a href="lab4/index.html">Lab 4</a></li>
+				<li><a href="lab5/index.html">Lab 5</a></li>
+				<li><a href="lab6/index.html">Lab 6</a></li>
 
 <img src="img/sanfranolivia.jpg" style="width:400px;height:450px;">
 
