--- a/lab3/index.html
+++ b/lab3/index.html
@@ -19,8 +19,7 @@
 	<h1> Results: </h1>
 	<p> Here are photos of my file structure and html for my homepage. <p>
 
-<img src="blankfornow" style="width:600px;height:400px;">
-<img src="blank" style="width:600px;height:400px;">
-
+<img src="homepagehtml.jpg" style="width:600px;height:400px;">
+<img src="filestructure.jpg" style="width:600px;height:400px;">
 </body>
 </html>
