--- a/lab5/index.html
+++ b/lab5/index.html
@@ -5,7 +5,19 @@
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
+	<h1>Lab 5: Working with Data Types and Variables <h1/>
 <body>
+	<h2>Challenge</h2>
+	<p>We worked with boolean, integer, and string data types in Lab 5 all while
+	learning about each other's cars as they were the variables to our data sets. </p>
+	<h2>Problems</h2>
+	<p>Configuring the current car age function was delayed because we forgot to
+	include parenthesis around the subtraction. </p>
+	<h2>Results</h2>
+	<p>Our Javascript output is shown below:</p>
+	<script src="js/lab.js"></script>
+	<img src="img/durangy_boi.jpg">
+	<img src="img/lr4.jpg">
 
 </body>
 </html>
