--- a/lab6/index.html
+++ b/lab6/index.html
@@ -5,7 +5,20 @@
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
+<h1>Lab 6: Arrays and Objects <h1/>
 <body>
+<h2>Challenge</h2>
+<p> Lab Six invited us to experiment with Javascript through the Chrome console
+and use variables that were based off our transportation habits. </p>
+<h2>Problems</h2>
+<p> We had to troubleshoot to get the agefunction to run properly. </p>
+<h2>Results</h2>
+<p>My Javascript output is shown below:</p>
+<script src="js/lab.js"></script>
+
+<img src="img/console.jpg"style="width:400px;height:320px;">
+
+<img src="img/java6.jpg" style="width:400px;height:320px;">
 
 </body>
 </html>
