--- a/lab4/index.html
+++ b/lab4/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
-	<h2>Challege:</h2>
+	<h2>Challenge:</h2>
 		<p>The purpose of Lab 4 is to introduce us to how to plan and think about
 		implementing a program step by step via the usage of high-level tasks.</p>
 	<h2>Problems:</h2>
