--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
 			<li><a href="lab4/index.html">Lab 4</a></li>
 				<li><a href="lab5/index.html">Lab 5</a></li>
 					<li><a href="lab7/index.html">Lab 7</a></li>
+					<li><a href="lab8/index.html">Lab 8</a></li>
+					<li><a href="lab9/index.html">Lab 9</a></li>
+
 
 
 <img src="img/sanfranolivia.jpg" style="width:400px;height:450px;">
