--- a/lab12/index.html
+++ b/lab12/index.html
@@ -9,16 +9,19 @@
 	<h1>Lab 12: Conditionals</h1>
 	<div id="challenge">
 		<h2>Challenge</h2>
-		<p>Lab 12 shows us how to</p>
+		<p>Lab 12 shows us how to use conditionals to make different outcomes
+		for different inputs. </p>
 	</div>
 	<div id="problems">
 		<h2>Problems</h2>
-		<p></p>
+		<p>I forgot to put }); at the end of my javascript and it interupted my
+		webpage because I would not get an output when I pressed the sumbit
+	button with my name written in the box. Luckily it was an easy fix. </p>
 
 	</div>
 	<div id="results">
 		<h2>Results</h2>
-		<p></p>
+		<p>The results are shown below:</p>
 		<div class="input-output">
 			<h2>Welcome to Hogwarts</h2>
 			<p>Prepared to be sorted into your house.</p>
