--- a/lab5/index.html
+++ b/lab5/index.html
@@ -16,8 +16,8 @@
 	<h2>Results</h2>
 	<p>Our Javascript output is shown below:</p>
 	<script src="js/lab.js"></script>
-	<img src="img/durangy_boi.jpg">
-	<img src="img/lr4.jpg">
+	<img src="img/colescar.jpg">
+	<img src="img/oliviascar.jpg">
 
 </body>
 </html>
