--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 		<li><a href="lab3/index.html">Lab 3</a></li>
 			<li><a href="lab4/index.html">Lab 4</a></li>
 				<li><a href="lab5/index.html">Lab 5</a></li>
+				<li><a href="lab6/index.html">Lab 6</a></li>
 					<li><a href="lab7/index.html">Lab 7</a></li>
 					<li><a href="lab8/index.html">Lab 8</a></li>
 					<li><a href="lab9/index.html">Lab 9</a></li>
@@ -27,6 +28,8 @@
 					<li><a href="lab11/index.html">Lab 11</a></li>
 					<li><a href="lab12/index.html">Lab 12</a></li>
 					<li><a href="lab13/index.html">Lab 13</a></li>
+					<li><a href="lab14/index.html">Lab 14</a></li>
+
 
 
 
