--- a/lab16/index.html
+++ b/lab16/index.html
@@ -1,30 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab 15 - AJAX</title>
+	<title>Lab 16 - JSON and APIs</title>
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 	<script src="js/lab.js" defer></script>
-	<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-	<script src=""
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 </head>
 <body>
-	<h1>Lab 15: AJAX</h1>
+	<h1>Lab 16 - JSON and APIs</h1>
 	<div id="challenge">
 		<h2>Challenge</h2>
-		<p>Lab 15 shows invites us to experiemnt with jQuery and AJAx.</p>
+		<p>Lab 16 invited us to process JSON from an API. </p>
 	</div>
 	<div id="problems">
 		<h2>Problems</h2>
-		<p>We encountered problems when we tried to figure out what to use for the
-		API. </p>
+		<p>We encountered problems when </p>
 	</div>
 	<div id="results">
 		<h2>Results</h2>
-		<p></p>
+		<p>Here is your comic!</p>
 		<button id="activate">Activate</button>
 		<div id="output">
 		</div>
 	</div>
-	<a href="js/lab.js">Javascript Source</a>
+	<a href="js/lab.js"></a>
 </body>
 </html>
