--- a/lab16/index.html
+++ b/lab16/index.html
@@ -14,7 +14,7 @@
 	</div>
 	<div id="problems">
 		<h2>Problems</h2>
-		<p>We encountered problems when </p>
+		<p>We encountered problems when linking my xkcd page.</p>
 	</div>
 	<div id="results">
 		<h2>Results</h2>
